--- a/gokart/index.html
+++ b/gokart/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" type="text/css" href="dist/static/css/font-awesome/css/font-awesome.css" />
   </head>
   <body>
+    <iframe src="https://kmi-uat.dbca.wa.gov.au/" style="width:100%;" hidden></iframe>
+
     <script type="text/javascript">
         var _env = {
             {%- if weatherforecast_url -%} 
