--- a/gokart/index.html
+++ b/gokart/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="dist/static/css/font-awesome/css/font-awesome.css" />
   </head>
   <body>
-    <iframe src="https://kmi-uat.dbca.wa.gov.au/" style="width:100%;" hidden></iframe>
+    <iframe src="https://kmi.dbca.wa.gov.au/geoserver/web/" style="width:100%;" hidden></iframe>
 
     <script type="text/javascript">
         var _env = {
